--- a/PokeColorbackground.css
+++ b/PokeColorbackground.css
@@ -238,58 +238,58 @@
     background-color: #A890F0; /* Lavender */
   }
 
-  .grass {
+  .grass1 {
     color: #78C850; /* Green */
 }
-.fire {
+.fire1 {
     color: #F08030; /* Orange */
 }
-.water {
+.water1 {
     color: #6890F0; /* Blue */
 }
-.bug {
+.bug1 {
     color: #A8B820; /* Olive */
 }
-.normal {
+.normal1 {
     color: #A8A878; /* Beige */
 }
-.electric {
+.electric1 {
     color: #F8D030; /* Yellow */
 }
-.poison {
+.poison1 {
     color: #A040A0; /* Purple */
 }
-.fairy {
+.fairy1 {
     color: #EE99AC; /* Pink */
 }
-.ground {
+.ground1 {
     color: #E0C068; /* Tan */
 }
-.fighting {
+.fighting1 {
     color: #C03028; /* Red */
 }
-.psychic {
+.psychic1 {
     color: #F85888; /* Pinkish */
 }
-.rock {
+.rock1 {
     color: #B8A038; /* Brown */
 }
-.ghost {
+.ghost1 {
     color: #705898; /* Purple-ish */
 }
-.ice {
+.ice1 {
     color: #98D8D8; /* Light blue */
 }
-.dragon {
+.dragon1 {
     color: #7038F8; /* Darker blue */
 }
-.dark {
+.dark1 {
     color: #705848; /* Dark brown */
 }
-.steel {
+.steel1 {
     color: #B8B8D0; /* Gray */
 }
-.flying {
+.flying1 {
     color: #A890F0; /* Lavender */
 }
 
