--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     font-family:Barlow;
+
 }
 
 .max-width {
@@ -73,6 +74,7 @@ header {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    
 }
 
 .center-text {
@@ -80,6 +82,7 @@ header {
     align-items: center;
     justify-content: center;
     text-align: center;
+    gap: 6px;
 }
 
 .poke-body img {
