--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 body {
     margin: 0;
     font-family:Barlow;
+    
+}
 
+.no-scroll {
+    overflow: hidden;
 }
 
 .max-width {
@@ -25,6 +29,7 @@ h1 {
 header {
     background-color: rgb(77, 228, 228);
     border-radius: 8px;
+    margin-bottom: 5%;
     
   
 }
@@ -52,7 +57,7 @@ header {
 }
 
 .pokecard {
-    margin-top: 5%;
+    margin-bottom: 5%;
     display: flex;
     flex-direction: column;
     width: 16%;
@@ -75,6 +80,7 @@ header {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    position: relative;
     
 }
 
@@ -94,6 +100,7 @@ header {
 
 .pokecard {
     transition: 0.7s;
+    cursor: pointer;
 }
 
 .pokecard:hover {
@@ -125,4 +132,161 @@ header {
     text-align: center;
     gap: 16px;
     width: 100%;
+}
+
+
+.single-pokemon-card-container {
+    display: flex;
+    justify-content: center;
+   
+}
+
+.single-pokemon-card{
+    width: 30%;
+    background-color: #060607;
+    height: 90vh;
+    display: flex;
+  flex-direction: column;
+    position: fixed;
+    z-index: 100;
+    border: solid black 3px;
+    top: 50px;
+}
+
+.name-and-id-line {
+    background-color: aqua;
+    height: 5%;
+    display: flex;
+    font-weight:  bold;
+    font-size: 26px;
+    justify-content: center;
+    align-items: center;
+    border-bottom: solid 3px black;
+    
+}
+
+.round-background {
+    color: #060607;
+    background-color: whitesmoke;
+    border-radius: 50%;
+    padding: 2px;
+    width: 25px;
+    height: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    font-size: 18px;
+    
+}
+
+.single-pokemon-card-img {
+    background-color: blanchedalmond;
+    height: 56%;
+    display: flex;
+    justify-content: center;
+    align-items: center
+}
+
+.single-pokemon-card-img img  {
+    height: 65%;
+    width: auto;
+}
+
+.pokemon-stats-container {
+    height: 45%;
+    background-color: orange;
+    border-top: solid 3px black;
+}
+
+.stat-line {
+    display: flex;
+    justify-content: space-around;
+    padding-top: 16px;
+    
+}
+
+.stat-line div {
+    background-color: azure;
+    padding: 4px 12px;
+    border-radius: 10%;
+    border: solid red 2.5px ;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+
+.center-name {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+}
+
+
+.seperator {
+    background-color: #060607;
+    width: 100%;
+    height: 2px;
+    margin-top: 10px;
+}
+
+.stats-information {
+    display: flex;
+    justify-content: center;
+    padding-top: 16px;
+    height: 71%;
+    align-items: center;
+    font-size: 26px;
+    font-weight: 600;
+}
+
+.stats-information ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.base-stats-item {
+    display: flex;
+    justify-content: space-between;
+    width: 250px; /* Passe die Breite nach Bedarf an */
+    padding: 5px 0;
+    border-bottom: 1px solid #020202e7; /* Optional, um die Einträge zu trennen */
+}
+
+.base-stat-name {
+    flex-grow: 1;
+    text-align: left;
+}
+
+.base-stat-number {
+    flex-grow: 0;
+    text-align: right;
+    width: 40px; /* Feste Breite für die Nummern, damit sie gut ausgerichtet sind */
+}
+
+.single-card-background {
+    width: 100%;
+    height: 100%;
+    z-index: 99;
+    position: absolute;
+ 
+}
+
+.d-none {
+    display: none;
+}
+
+.blur {
+    filter: blur(3px);
+}
+
+
+
+
+@media screen and (max-width: 1600px) {
+    .single-pokemon-card {
+        width: 45%;
+    }
 }
