--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+    height: 100%;
+}
+
 body {
     margin: 0;
     font-family:Barlow;
@@ -8,6 +12,7 @@ body {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    height: 100%;
 }
 
 .no-scroll {
@@ -273,15 +278,17 @@ header {
 }
 
 .single-card-background {
+    z-index: 99;
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    z-index: 99;
-    position: absolute;
  
 }
 
 .d-none {
-    display: none;
+    display: none !important;
 }
 
 .blur {
@@ -298,6 +305,26 @@ header {
     font-size: 34px;
     font-weight: bold;
 }
+
+
+.loading_spiner {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    font-size: 32px;
+    flex-direction: column;
+    font-weight: bold;
+    gap:  32px;
+    
+}
+
+
+
 
 @media screen and (max-width: 1600px) {
     .single-pokemon-card {
