--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html {
     height: 100%;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -15,7 +16,11 @@ body {
     height: 100%;
 }
 
-label {
+.body-mobile {
+    overflow-x: hidden;
+}
+
+.label {
     font-weight: 600;
     padding-left: 16px;
 }
@@ -24,6 +29,7 @@ label {
     display: flex;
     align-items: center;
     gap: 12px;
+    
 }
 
 #number-selection span {
@@ -62,6 +68,7 @@ label {
     color: white;
     border-radius: 4px;
     outline: none;
+    cursor: pointer;
 }
 
 #number-select select:hover {
@@ -249,7 +256,7 @@ header {
 
 .single-pokemon-card-img {
     background-color: blanchedalmond;
-    height: 56%;
+    height: 54%;
     display: flex;
     justify-content: space-around;
     align-items: center
@@ -435,9 +442,13 @@ header {
     width: 100%;
     height: 25%;
     display: flex;
-    justify-content: center;
     align-items: center;
-    flex-direction: column;
+    
+}
+
+.btn-container-child {
+    display: flex;
+    width: 100%;
 }
 
 #btn {
@@ -497,24 +508,85 @@ input {
     margin-bottom: 16px;
 }
 
-.load64 {
-    justify-content: center;
+.bar-container {
+    width: 200px; /* Breite der Bar */
+    height: 20px; /* Höhe der Bar */
+    background-color: #f0f0f0; /* Hintergrundfarbe der Bar */
+    border-radius: 10px; /* Runde Ecken für die Bar */
+    ; /* Platz unter der Bar */
+  }
+  
+  .filling {
     display: flex;
-    margin: 6px;
+    height: 100%;
+    background-color: #b74080;
+    border-radius: 10px;
+    width: 0;
+    transition: width 1s ease;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+  }
+
+  .bar-stat-name {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    gap: 12px;
+  }
+
+
+  .table-wrapper {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+  }
+  
+  /* Jede Zeile im Table */
+  .table-row {
+    display: flex;
+    align-items: center;
+  }
+  
+  /* Jeder Stat-Name */
+  .bar-stat-name {
+    flex: 1;
+  }
+  
+  /* Jeder Balken */
+  .bar-container {
+    flex: 1;
+  }
+
+  .loading_spiner_Btn {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+
+.anchor {
+    display: flex;
+    width: 0%;
+    justify-content: flex-end;
+    padding-right: 49px;
+    align-items: center;
 }
 
-.d-block {
-    display: block;
+.anchor img {
+    height: 100px;
 }
 
-.chart-canvas {
-  width: 400px !important;
-  height: 400px !important;
+  @media screen and (min-width: 2000px) {
+    #number-selection {
+        justify-content: center;
+    }
 }
 
 @media screen and (max-width: 1600px) {
     .single-pokemon-card {
-        width: 45%;
+        width: 47%;
     }
 }
 
@@ -566,11 +638,19 @@ input {
         margin-bottom: 10px;
     }
 
+    .anchor {
+        display: none;
+    }
+
     header {
         height: 10%;
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+
+    input {
+        padding: 4px;
     }
 
     .stats-information {
@@ -589,20 +669,24 @@ input {
         height: 45%;
     }
     
+    .single-pokemon-card {
+        width: 73%;
+    }
 }
 
-@media (max-width: 425px ) {
+@media (max-width: 429px ) {
     .pokecard {
         width: 62%;
         margin-bottom: 32px;
     }
 
     .stats-information {
-        font-size: 18px;
+        font-size: 17px;
     }
 
     .single-pokemon-card {
        top: 10px;
+       width: 74%;
     }
     
     #current-load-value {
@@ -610,7 +694,7 @@ input {
         gap: 6px;
     }
    
-    label {
+    .label {
         font-size: 12px;
     }
 
@@ -620,9 +704,39 @@ input {
     .single-pokemon-card {
         width: 85%;
     }
+    .stats-information {
+        font-size: 16px;
+    }
 
   
 }
+
+@media  (max-height: 880px) {
+    .single-pokemon-card-img {
+        height: 48%;
+    }
+}
+
+@media  (max-height: 880px) {
+    nav h1 {
+        display: none;
+        padding: 0;
+    }
+
+    .single-pokemon-card {
+        height: 85vh;
+    }
+
+    .single-pokemon-card-img {
+        height: 38%;
+    }
+
+    .pokemon-stats-container {
+        height: 56%;
+    }
+
+}
+    
 
 
 @media (max-height: 577px) {
@@ -648,18 +762,3 @@ input {
 }
 
 
-.bar-container {
-    width: 200px; /* Breite der Bar */
-    height: 20px; /* Höhe der Bar */
-    background-color: #f0f0f0; /* Hintergrundfarbe der Bar */
-    border-radius: 10px; /* Runde Ecken für die Bar */
-    ; /* Platz unter der Bar */
-  }
-  
-  .filling {
-    height: 100%; /* Die Füllung hat die volle Höhe der Bar */
-    background-color: #007bff; /* Farbe der Füllung */
-    border-radius: 10px; /* Runde Ecken für die Füllung */
-    width: 0; /* Startbreite der Füllung */
-    transition: width 0.5s ease; /* Übergangseffekt für eine sanfte Animation */
-  }
