--- a/style.css
+++ b/style.css
@@ -264,7 +264,9 @@ header {
     height: 54%;
     display: flex;
     justify-content: space-around;
-    align-items: center
+    align-items: center;
+    position: relative;
+    
 }
 
 .single-pokemon-card-img img  {
@@ -420,12 +422,16 @@ header {
     font-size: 34px;
     font-weight: bold;
     cursor: pointer;
+    position: absolute;
+    left: 16px;
 }
 
 #click-backward {
     font-size: 34px;
     font-weight: bold;
     cursor: pointer;
+    position: absolute;
+    right: 16px;
 }
 
 
